# match-video

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: notebook.ipynb  script.py  streamlit.py
match_video/: __init__.py  anchor.py  cli.py  utils.py
tests/: test_cli.py  test_utils.py
